Creating authentications module
