# Código/Proyecto_Web/index.js
@@ -2,13 +2,12 @@ require("dotenv").config({ path: "./config/config.env" });
 const express = require("express");
 const bodyParser = require("body-parser");
 const swaggerUi = require("swagger-ui-express");
-const swaggerDocument = require("./swagger.json");
 const cookieParser = require("cookie-parser");
-const db = require("./config/db.config");
 const cors = require("cors");
-
-const { login, authenticate } = require("./app/Core/authentication");
-
+const db = require("./config/db.config");
+const swaggerDocument = require("./swagger.json");
+const { authenticate } = require("./app/Core/authenticate.middleware");
+const routeAuthentications = require("./app/Authentications/authentications.route");
 const routeEvents = require("./app/Events/events.route");
 const routeDevices = require("./app/Devices/devices.route");
 const routeNotifications = require("./app/Notifications/notifications.route");
@@ -40,8 +39,8 @@ app.use("/api/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use("/api/events", routeEvents);
 app.use("/api/devices", routeDevices);
 app.use("/api/signals", routeSignals);
-app.use("/api/notifications", routeNotifications);
-app.use("/api/login", login);
+app.use("/api/notifications", authenticate, routeNotifications);
+app.use("/api/authentications", routeAuthentications);
 
 // set port, listen for requests
 const PORT = process.env.PORT || 8080;
